Fixed long circle name design collapse

--- a/app/static_src/less/dashboard_circle_list.less
+++ b/app/static_src/less/dashboard_circle_list.less
@@ -266,3 +266,20 @@
 .circle-view-all-block {
   margin: 10px 0 0;
 }
+
+#InsightCircleResult{
+  table{
+    table-layout: fixed;
+    width:100%;
+  }
+  tr{
+    td, th{
+      width:12.5%;
+      text-align:center;
+      &:first-of-type{
+        width:50%;
+        text-align:left;
+      }
+    }
+  }
+}
